<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:id="@+id/buttonOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonOn"
        android:layout_alignParentRight="true"
        android:text="@string/stani" />

    <TextView
        android:id="@+id/View1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtString"
        android:text=""
        android:textSize="15sp"
        android:textColor="#d3d3d3"
        android:layout_below="@+id/buttonTips"/>

    <TextView
        android:id="@+id/txtString"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/View1"
        android:layout_alignParentBottom="true"
        android:text=""
        android:textSize="15sp"
        android:textColor="#d3d3d3"/>




    <Button
        android:text="@string/tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonTips"
        android:layout_above="@+id/txtString"
        android:layout_alignLeft="@+id/buttonAllShots"
        android:layout_alignStart="@+id/buttonAllShots" />

    <Button
        android:text="@string/best_shot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonBestShot"
        android:layout_above="@+id/buttonTips"
        android:layout_alignLeft="@+id/buttonAllShots"
        android:layout_alignStart="@+id/buttonAllShots"
        android:layout_marginBottom="12dp" />



    <Button
        android:text="@string/all_shots_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonAllShots"
        android:layout_marginBottom="11dp"
        android:layout_above="@+id/buttonBestShot"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/buttonOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kreni"
        android:layout_marginRight="65dp"
        android:layout_marginEnd="65dp"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/buttonOff"
        android:layout_toStartOf="@+id/buttonOff" />

</RelativeLayout>